2003-07-18	Till Straumann <strauman@slac.stanford.edu>

	PR 288/rtems
	* irq/irq_asm.S, startup/bspstart.c: _ISR_Nest_level is now properly
	maintained and any BSP which does not do so will trip a panic in the
	shared code.

2003-07-18	Till Straumann <strauman@slac.stanford.edu>

	PR 415/bsps
	* pci/detect_raven_bridge.c, startup/bspstart.c:
	This patch reverts enabling MCP interrupts for the motorola_powerpc
	BSPs. REASON: pci config space scanning (as e.g. done by the DEC
	Ethernet driver) would raise machine check exceptions.

2003-07-16      Greg Menke <gregory.menke@gsfc.nasa.gov>

	PR 428/bsps
	PR 432/bsps
	* bootloader/pci.c: Re-instated code that prevents remapping small
	IO regions, which if remapped would cause i8259 registers to move
	out from under the #define'd base addresses.
	* startup/bspstart.c: Reduced BAT2 PCI memory allocation to 256
	megs, I incorrectly had extended it which would cause problems with
	PCI devices that defined prefetchable memory.

2003-07-16      Greg Menke <gregory.menke@gsfc.nasa.gov>
	PR 432/bsps
	* bootloader/pci.c: Re-instated code that prevents remapping small
	IO regions, which if remapped would cause i8259 registers to move
	out from under the #define'd base addresses.
	* startup/bspstart.c: Reduced BAT2 PCI memory allocation to 256
	megs, I incorrectly had extended it which would cause problems with
	PCI devices that defined prefetchable memory.
	
2003-06-13	Greg Menke <gregory.menke@gsfc.nasa.gov>

	PR 405/bsps
	* bootloader/pci.c: Added support for configuring devices for pci
	busses > 0
	* pci/pci.c, pci/pci.h: Added FixupPCI() to store vectors in the
	INTERRUPT_LINE register of pci devices any # of hops away
	from the host processor.
	* motorola/motorola.c, motorola/motorola.h: Added interrupt
	routing tables in support of FixupPCI.  This is board-specific,
	each board will have to supply information for FixupPCI() to do
	anything for it.
	* startup/bspstart.c: Extended bat2 to cover entire PCI address space.